--- a/Spark/PracticePySpark.ipynb
+++ b/Spark/PracticePySpark.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "83368e0d",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-21T09:14:51.321862Z",
+     "iopub.status.busy": "2025-05-21T09:14:51.320587Z",
+     "iopub.status.idle": "2025-05-21T09:14:51.638198Z",
+     "shell.execute_reply": "2025-05-21T09:14:51.635987Z",
+     "shell.execute_reply.started": "2025-05-21T09:14:51.321802Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -14,9 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "70c3904a",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-21T09:14:52.327220Z",
+     "iopub.status.busy": "2025-05-21T09:14:52.325568Z",
+     "iopub.status.idle": "2025-05-21T09:14:52.333685Z",
+     "shell.execute_reply": "2025-05-21T09:14:52.331889Z",
+     "shell.execute_reply.started": "2025-05-21T09:14:52.327128Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -26,14 +40,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1e92fe13",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-21T09:14:53.287382Z",
+     "iopub.status.busy": "2025-05-21T09:14:53.286065Z",
+     "iopub.status.idle": "2025-05-21T09:15:00.626803Z",
+     "shell.execute_reply": "2025-05-21T09:15:00.625388Z",
+     "shell.execute_reply.started": "2025-05-21T09:14:53.287334Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/05/21 12:14:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/05/21 12:14:59 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "/home/santalovdv/.local/lib/python3.7/site-packages/pyspark/context.py:317: FutureWarning: Python 3.7 support is deprecated in Spark 3.4.\n",
+      "  warnings.warn(\"Python 3.7 support is deprecated in Spark 3.4.\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "# создание сессии\n",
+    "# создание сессии с помощью SparkSession\n",
     "\n",
     "spark = SparkSession.builder.appName('Practice').getOrCreate()"
    ]
@@ -41,11 +75,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "420a759d-c55d-4d2e-b87e-004efa62c116",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# создание ссесии с помощью SparkContext\n",
+    "\n",
+    "from pyspark import SparkContext, SparkConf\n",
+    "\n",
+    "conf = SparkConf().setMaster(\"local\").setAppName(\"newSession\")\n",
+    "\n",
+    "sc = SparkContext(conf=conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "39c739b4",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-21T09:15:02.952574Z",
+     "iopub.status.busy": "2025-05-21T09:15:02.951776Z",
+     "iopub.status.idle": "2025-05-21T09:15:04.749416Z",
+     "shell.execute_reply": "2025-05-21T09:15:04.747586Z",
+     "shell.execute_reply.started": "2025-05-21T09:15:02.952471Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://oka-analyze-en-001.krd.bd-cloud.mts.ru:4041\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.4.3</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>Practice</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0x7f320f192b10>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spark"
    ]
@@ -293,8 +384,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a883b64b-4552-4d43-8166-2f7ea7233ba2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-21T09:17:16.330334Z",
+     "iopub.status.busy": "2025-05-21T09:17:16.329603Z",
+     "iopub.status.idle": "2025-05-21T09:17:20.200824Z",
+     "shell.execute_reply": "2025-05-21T09:17:20.199511Z",
+     "shell.execute_reply.started": "2025-05-21T09:17:16.330290Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# создание DataFrame (самостоятельно)\n",
+    "\n",
+    "data = [('Lucy', 10, 3_000),('Tanya', 35, 200_000), ('Kolya', 15, 0)]\n",
+    "\n",
+    "df = spark.createDataFrame(data, ['name', 'age', 'money'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13355d50-b103-4766-9006-02c991f791d7",
    "metadata": {},
    "outputs": [],
    "source": []
