--- a/Spark/PracticePySpark.ipynb
+++ b/Spark/PracticePySpark.ipynb
@@ -2,16 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "83368e0d",
+   "execution_count": null,
+   "id": "f143dc79",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-21T09:14:51.321862Z",
-     "iopub.status.busy": "2025-05-21T09:14:51.320587Z",
-     "iopub.status.idle": "2025-05-21T09:14:51.638198Z",
-     "shell.execute_reply": "2025-05-21T09:14:51.635987Z",
-     "shell.execute_reply.started": "2025-05-21T09:14:51.321802Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -21,16 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "70c3904a",
+   "execution_count": null,
+   "id": "0b189afb",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-21T09:14:52.327220Z",
-     "iopub.status.busy": "2025-05-21T09:14:52.325568Z",
-     "iopub.status.idle": "2025-05-21T09:14:52.333685Z",
-     "shell.execute_reply": "2025-05-21T09:14:52.331889Z",
-     "shell.execute_reply.started": "2025-05-21T09:14:52.327128Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -40,42 +26,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1e92fe13",
+   "execution_count": null,
+   "id": "896f19cb",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-21T09:14:53.287382Z",
-     "iopub.status.busy": "2025-05-21T09:14:53.286065Z",
-     "iopub.status.idle": "2025-05-21T09:15:00.626803Z",
-     "shell.execute_reply": "2025-05-21T09:15:00.625388Z",
-     "shell.execute_reply.started": "2025-05-21T09:14:53.287334Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/05/21 12:14:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "25/05/21 12:14:59 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "/home/santalovdv/.local/lib/python3.7/site-packages/pyspark/context.py:317: FutureWarning: Python 3.7 support is deprecated in Spark 3.4.\n",
-      "  warnings.warn(\"Python 3.7 support is deprecated in Spark 3.4.\", FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# создание сессии с помощью SparkSession\n",
     "\n",
-    "spark = SparkSession.builder.appName('Practice').getOrCreate()"
+    "spark = SparkSession.builder.appName('Practice').getOrCreate()\n",
+    "\n",
+    "spark.sql(\"select 'hello spark'\").collect()[0][0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "420a759d-c55d-4d2e-b87e-004efa62c116",
+   "id": "92f7ac49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,58 +53,19 @@
     "\n",
     "conf = SparkConf().setMaster(\"local\").setAppName(\"newSession\")\n",
     "\n",
-    "sc = SparkContext(conf=conf)"
+    "sc = SparkContext(conf=conf)\n",
+    "\n",
+    "spark.sql(\"select 'hello spark'\").collect()[0][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "39c739b4",
+   "execution_count": null,
+   "id": "44685a0c",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-21T09:15:02.952574Z",
-     "iopub.status.busy": "2025-05-21T09:15:02.951776Z",
-     "iopub.status.idle": "2025-05-21T09:15:04.749416Z",
-     "shell.execute_reply": "2025-05-21T09:15:04.747586Z",
-     "shell.execute_reply.started": "2025-05-21T09:15:02.952471Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <div>\n",
-       "                <p><b>SparkSession - in-memory</b></p>\n",
-       "                \n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://oka-analyze-en-001.krd.bd-cloud.mts.ru:4041\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v3.4.3</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>Practice</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        \n",
-       "            </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f320f192b10>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark"
    ]
@@ -144,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8137e376",
+   "id": "30194631",
    "metadata": {
     "tags": []
    },
@@ -162,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "446162bd",
+   "id": "20bfd6b2",
    "metadata": {
     "tags": []
    },
@@ -178,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be326a5a",
+   "id": "07079fb1",
    "metadata": {
     "tags": []
    },
@@ -192,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "964c518b",
+   "id": "e0bc19ac",
    "metadata": {
     "tags": []
    },
@@ -206,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ee4966",
+   "id": "b27a238a",
    "metadata": {
     "tags": []
    },
@@ -220,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd737cd",
+   "id": "e019a993",
    "metadata": {
     "tags": []
    },
@@ -233,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114e2e28",
+   "id": "47ce235a",
    "metadata": {
     "tags": []
    },
@@ -243,13 +172,15 @@
     "\n",
     "df_spark.select('regid', 'dayy').show()\n",
     "\n",
-    "# df_spark['regid', 'dayy'].show()"
+    "# df_spark['regid', 'dayy'].show()\n",
+    "\n",
+    "#df.regid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c0a04fc",
+   "id": "a337b895",
    "metadata": {
     "tags": []
    },
@@ -263,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb0a644b",
+   "id": "37cefde7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cefcf88e",
+   "id": "c780b95f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd66aa85",
+   "id": "8bb4a4f7",
    "metadata": {
     "tags": []
    },
@@ -303,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85709161-330a-4e94-8d5f-9e6c779faf1a",
+   "id": "affc8502",
    "metadata": {
     "tags": []
    },
@@ -317,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112e26e2-2857-441d-8fb9-12c4d0a33350",
+   "id": "3f0d9436",
    "metadata": {
     "tags": []
    },
@@ -338,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4acbe3f6-56e5-4d48-9bc7-25fc4464e6f9",
+   "id": "6bb1ef56",
    "metadata": {
     "tags": []
    },
@@ -354,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f7de4d-e192-457b-99f4-4fb136bc3b8b",
+   "id": "37247f30",
    "metadata": {
     "tags": []
    },
@@ -371,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c7ec7da-f124-44db-ab1e-8063bb669e99",
+   "id": "7f9f51d2",
    "metadata": {
     "tags": []
    },
@@ -384,16 +315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a883b64b-4552-4d43-8166-2f7ea7233ba2",
+   "execution_count": null,
+   "id": "38a0eed1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Фильтр like\n",
+    "\n",
+    "df_spark.filter(df_spark['global_code'].like('PE5%')).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b6b3ce8",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-21T09:17:16.330334Z",
-     "iopub.status.busy": "2025-05-21T09:17:16.329603Z",
-     "iopub.status.idle": "2025-05-21T09:17:20.200824Z",
-     "shell.execute_reply": "2025-05-21T09:17:20.199511Z",
-     "shell.execute_reply.started": "2025-05-21T09:17:16.330290Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -408,7 +344,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13355d50-b103-4766-9006-02c991f791d7",
+   "id": "b1f678a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Группировка\n",
+    "\n",
+    "df_spark.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c95033d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Группировка\n",
+    "# у группировки много есть агрегирующих функций (sum, min, max и тд.) Если не указывать ничего внутри функции, \n",
+    "# он будет суммировать все поля числовые, если указать внутри функции, то только их\n",
+    "\n",
+    "df_spark.groupBy('global_code').sum('service', 'dayy')\n",
+    "\n",
+    "# df_spark.groupBy('global_code').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f336c85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# среднее и подсчет элементов\n",
+    "\n",
+    "df_spark.groupBy('global_code').mean().show()\n",
+    "\n",
+    "df_spark.groupBy('global_code').count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f41122c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# агрегирующая функция (два варианта применения)\n",
+    "from pyspark.sql.functions import sum\n",
+    "\n",
+    "df_spark.groupBy(\"global_code\").agg({'regid':'sum'}).show()\n",
+    "\n",
+    "df_spark.groupBy(\"global_code\").agg(sum('regid').alias('cnt_day')).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aea2ea1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# сортировка \n",
+    "\n",
+    "\n",
+    "# df_spark.sort(df_spark['dayy'].asc()).show()\n",
+    "\n",
+    "df_spark.orderBy(df_spark['dayy'].asc()).show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b23a843c",
    "metadata": {},
    "outputs": [],
    "source": []
