--- a/Spark/PracticePySpark.ipynb
+++ b/Spark/PracticePySpark.ipynb
@@ -110,12 +110,16 @@
    "execution_count": 5,
    "id": "4545c8f7",
    "metadata": {
+    "collapsed": true,
     "execution": {
      "iopub.execute_input": "2025-05-26T11:55:27.643849Z",
      "iopub.status.busy": "2025-05-26T11:55:27.642794Z",
      "iopub.status.idle": "2025-05-26T11:55:27.681699Z",
      "shell.execute_reply": "2025-05-26T11:55:27.680173Z",
      "shell.execute_reply.started": "2025-05-26T11:55:27.643802Z"
+    },
+    "jupyter": {
+     "outputs_hidden": true
     },
     "tags": []
    },
